# openCOSMO-RS_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  openCOSMORS.sln  openCOSMORS.vcxproj  openCOSMORS.vcxproj.filters  openCOSMORS_python_example.pyproj  open_vs_with_conda_env.bat
bindings/: 1112tetrachloroethane.orcacosmo  compile_mex.m  methanol.orcacosmo  run_example.m  run_example.py  water.orcacosmo
code/: COSMOfile_functions.hpp  bindings_forCLI.cpp  bindings_forMATLAB.cpp  bindings_forPython.cpp  contact_statistics.hpp  core_functions.hpp  general.hpp  helper_functions.hpp  interaction_matrix-KEMI-8CC0135FQ0.hpp  interaction_matrix.hpp  types.hpp
